DFHack future

The future has not yet happened. Stay tuned!

DFHack v0.34.11-r5

  Internals:
    - support for calling a lua function via a protobuf request (demonstrated by dfhack-run --lua).
    - support for basic filesystem operations (e.g. chdir, mkdir, rmdir, stat) in C++ and Lua
    - Lua API for listing files in directory. Needed for mod-manager.
    - Lua API for creating unit combat reports and writing to gamelog.
    - Lua API for running arbitrary DFHack commands
    - support for multiple raw/init.d/*.lua init scripts in one save.
    - eventful now has a more friendly way of making custom sidebars
    - on Linux and OSX the console now supports moving the cursor back and forward by a whole word.

  New scripts:
    - gui/mod-manager: allows installing/uninstalling mods into df from df/mods directory.
    - gui/clone-uniform: duplicates the currently selected uniform in the military screen.
    - fix/build-location: partial work-around for bug 5991 (trying to build wall while standing on it)
    - undump-buildings: removes dump designation from materials used in buildings.
    - exportlegends: exports data from legends mode, allowing a set-and-forget export of large worlds.
    - log-region: each time a fort is loaded identifying information will be written to the gamelog.
    - dfstatus: show an overview of critical stock quantities, including food, drinks, wood, and bars.

  New commands:
    - 'plant create' - spawn a new shrub under the cursor
    - command-prompt: a dfhack command prompt in df.

  New tweaks:
    - craft-age-wear: make crafted items wear out with time like in old versions (bug 6003)
    - adamantine-cloth-wear: stop adamantine clothing from wearing out (bug 6481)
    - confirm-embark: adds a prompt before embarking (on the "prepare carefully" screen)

  New plugins:
    - rendermax: replace the renderer with something else. Most interesting is "rendermax light"- a lighting engine for df.